# petrelgridio

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  run_tests.py  setup.cfg
geometry/: hex_mesh.py  hybrid_mesh.py  petrel_grid.py  petrel_mesh.py  primitives.py  raw_mesh.py  tet_mesh.py  uniform_mesh.py
ios/: vtu.py
petrelgridio/: raw_mesh.py
src/petrelgridio/: __init__.py  dummy_petrel_grids.py  edge_utils.py  hybrid_mesh.py  petrel_grid.py  petrel_mesh.py  primitives.py  raw_mesh.py  uniform_mesh.py  vtu.py
tests/: test_dummy_grids.py  test_export_hexmesh_to_vtu.py  test_export_hybridmesh_to_vtu.py  test_export_rawmesh_to_vtu.py  test_export_to_vtu.py  test_fault_pillars.py  test_on_data_20x20x5_fault.py  test_on_ramp.py  test_vtu_export.py  utils.py
tests/data/: 20X20X6_with_flat_pillars.GRDECL  fault_pillars.py
tests/output/: .gitignore
