[metadata]
name = petrelgridio
author = Jean-Pierre Vergnes, Nicolas Clausolles, Simon Lopez
author_email = n.clausolles@brgm.com
description = Read Petrel pillar grids and export them to VTU
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pycgal >= 0.2.18
    vtkwriters >= 0.0.6
    verstr >= 0.1.2
[options.packages.find]
where = src
